Flaggedrevs: Fix overflow in edit notice
Bug: T360466

--- a/modules/ext.flaggedRevs.basic/default.css
+++ b/modules/ext.flaggedRevs.basic/default.css
@@ -34,7 +34,6 @@ div.flaggedrevs_notice {
 	border: 2px solid #a2a9b1;
 	background-color: #f8f9fa;
 	text-align: left;
-	width: 100%;
 	clear: both;
 }
 
